[gd_scene load_steps=5 format=3 uid="uid://d1b7rp10lemc"]

[ext_resource type="PackedScene" uid="uid://c0mw0jwbq1np4" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/input_templateBuffer.tscn" id="1"]
[ext_resource type="Script" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Vector.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://b0x40ln8a6syy" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Label_Template.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://c7c0ymusji584" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Number_Counter_Float.tscn" id="4_873c8"]

[node name="Input_Vector" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource("3")
label_text = "Input_Vector"

[node name="Label" parent="." instance=ExtResource("4")]
layout_mode = 2

[node name="HBox3" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InputX" parent="HBox3" instance=ExtResource("4_873c8")]
layout_mode = 2
label_text = "X"
is_label_button = false

[node name="InputY" parent="HBox3" instance=ExtResource("4_873c8")]
layout_mode = 2
label_text = "Y"
is_label_button = false

[node name="InputZ" parent="HBox3" instance=ExtResource("4_873c8")]
layout_mode = 2
label_text = "Z"
is_label_button = false

[node name="input_templateBuffer" parent="." instance=ExtResource("1")]
layout_mode = 2
